--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
+cmake_policy(SET CMP0054 NEW)
+
 project(dronedoc)
 
 add_compile_options(-std=c++11)
@@ -8,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   mavros_msgs
   roscpp
   sensor_msgs
+  nav_msgs
 )
 
 find_package(gazebo REQUIRED)
@@ -24,3 +27,14 @@ include_directories(
 
 add_executable(offboard_sample src/offboard_sample.cpp)
 target_link_libraries(offboard_sample ${catkin_LIBRARIES})
+
+add_executable(odom_publisher src/odom_publisher.cpp)
+target_link_libraries(odom_publisher ${catkin_LIBRARIES})
+
+set(PACK_AIRFRAME_DIR ${CMAKE_CURRENT_SOURCE_DIR}/posix_airframes)
+set(LOCAL_AIRFRAME_DIR $ENV{HOME}/.ros/etc/init.d-posix)
+
+if(NOT EXISTS ${LOCAL_AIRFRAME_DIR}/70010_iris_2d_lidar)
+  add_custom_target(iris_2d_lidar
+                    ALL ln -s ${PACK_AIRFRAME_DIR}/70010_iris_2d_lidar ${LOCAL_AIRFRAME_DIR}/)
+endif()
