--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>tf</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>laser_assembler</run_depend>
@@ -25,6 +26,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>laser_filters</run_depend>
+  <run_depend>tf</run_depend>
 
   <export>
   </export>
