--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>dronedoc</name>
   <version>1.0.0</version>
   <description>PX4 simulation tutorials</description>
@@ -11,23 +11,19 @@
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>laser_assembler</build_depend>
-  <build_depend>mavros_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>tf</build_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>laser_assembler</depend>
+  <depend>mavros_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf</depend>
 
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>laser_assembler</run_depend>
-  <run_depend>mavros_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>laser_filters</run_depend>
-  <run_depend>tf</run_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <export>
+    <gazebo_ros gazebo_model_path="${prefix}/models"/>
   </export>
 </package>
