Update base_local_planner param to improve path following performance

--- a/config/base_local_planner_params.yaml
+++ b/config/base_local_planner_params.yaml
@@ -11,6 +11,9 @@ TrajectoryPlannerROS:
   acc_lim_x: 2.5
   acc_lim_y: 2.5
 
+  pdist_scale: 1.0
+  gdist_scale: 0.5
+
   holonomic_robot: true
 
   yaw_goal_tolerance: 0.05
