--- a/config/base_local_planner_params.yaml
+++ b/config/base_local_planner_params.yaml
@@ -1,22 +1,7 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.2
-  min_vel_x: -0.2
-  max_vel_theta: 1.0
-  min_vel_theta: -1.0
-  min_in_place_vel_theta: 0.4
-
-  y_vels: [-0.2, -0.1, 0.1, 0.2]
-
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
-
-  pdist_scale: 1.0
-  gdist_scale: 0.5
-
+  max_vel_x: 0.4
+  min_vel_x: -0.1
+  meter_scoring: true
+  pdist_scale: 0.9
+  xy_goal_tolerance: 1.0
   holonomic_robot: true
-
-  yaw_goal_tolerance: 0.05
-  xy_goal_tolerance: 0.5
-
-  oscillation_reset_dist: 0.01
