--- a/config/global_costmap_params.yaml
+++ b/config/global_costmap_params.yaml
@@ -1,9 +1,10 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
+  publish_frequency: 1.0
   update_frequency: 5.0
   static_map: false
   rolling_window: true
-  width: 50.0
-  height: 50.0
-  resolution: 0.5
+  width: 20.0
+  height: 20.0
+  resolution: 0.1
