--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>tf</depend>
+  <depend>ompl</depend>
   <depend>gazebo_ros</depend>
 
   <exec_depend>laser_filters</exec_depend>
