--- a/dronedoc/package.xml
+++ b/dronedoc/package.xml
@@ -9,6 +9,8 @@
   <author>Takaki Ueno</author>
 
   <license>MIT</license>
+  <url type="website">https://github.com/uenota/dronedoc</url>
+  <url type="bugtracker">https://github.com/uenota/dronedoc/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
