--- a/dronedoc/CMakeLists.txt
+++ b/dronedoc/CMakeLists.txt
@@ -105,7 +105,7 @@ set(PACK_AIRFRAME_DIR ${CMAKE_CURRENT_SOURCE_DIR}/posix_airframes)
 set(LOCAL_AIRFRAME_DIR $ENV{HOME}/.ros/etc/init.d-posix)
 
 if(NOT EXISTS ${LOCAL_AIRFRAME_DIR})
-  message(FATAL_ERROR "PX4 Firmware is REQUIRED.\nInstall and run 'make px4_sitl_default gazebo'.\nIf this persists after installation, make symbolic link from Firmware/ROMFS/px4fmu_common to ~/.ros/etc")
+  file(MAKE_DIRECTORY ${LOCAL_AIRFRAME_DIR})
 endif()
 
 add_custom_target(iris_2d_lidar
