--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           name: move doc
           command: |
             shopt -s dotglob
-            mv docs/ja/html/* ja/
+            mv docs/ja/html/* .
             mv docs/en/html/* en/
             shopt -u dotglob
             rm -rf docs
