--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,11 +56,10 @@ jobs:
           command: |
             shopt -s dotglob
             mv docs/ja/html/* ja/
-            mv ja/_images .
-            mv ja/_sources .
-            mv ja/_static .
+            cp -r ja/_images .
+            cp -r ja/_sources .
+            cp -r ja/_static .
             mv docs/en/html/* en/
-            rm -rf en/_*
             shopt -u dotglob
             rm -rf docs
           working_directory: ~/project
