--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,8 @@ jobs:
           command: |
             shopt -s dotglob
             mv docs/ja/html/* ja/
-            cp -r ja/_images .
-            cp -r ja/_sources .
-            cp -r ja/_static .
             mv docs/en/html/* en/
+            touch .nojekyll
             shopt -u dotglob
             rm -rf docs
           working_directory: ~/project
