--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: move doc (JP)
           command: |
-            mkdir jp
+            mkdir ja
             shopt -s dotglob
             mv docs/ja/html/* ja/
             shopt -u dotglob
