--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,19 +32,18 @@ jobs:
             cd ..
             sudo rm -rf youtube
       - run:
-          name: build doc (JP)
+          name: build doc (JA)
           command: |
             make clean
             make html -e SPHINXOPTS='-D language="ja"' -e BUILDDIR='../docs/ja'
           working_directory: ~/project/dronedoc
       - run:
-          name: move doc (JP)
+          name: move doc (JA)
           command: |
             mkdir ja
             shopt -s dotglob
             mv docs/ja/html/* ja/
             shopt -u dotglob
-            ls | grep -v -E "ja" | xargs rm -rf
           working_directory: ~/project
       - run:
           name: build doc (EN)
